--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -50,9 +50,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: |
-            backend/release/**/*.exe
-            backend/release/**/*.msi
+          files: backend/release/*.exe
           draft: false
           prerelease: false
         env:
