--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,29 @@
-# MongoDB configuration
-# Replace placeholders with your actual connection details
-MONGODB_URI=mongodb+srv://arnavvermas84_db_user:qwertyuiop1234567890@cosmo.zi4zb4q.mongodb.net/?retryWrites=true&w=majority&appName=Cosmo
+# Supabase configuration (CLOUD - Auth only)
+# User authentication data (email, password) stored securely in cloud
+# Get these from: https://supabase.com/dashboard/project/YOUR_PROJECT/settings/api
+SUPABASE_URL=https://xhnpzfmvibnbyhywnykx.supabase.co
+SUPABASE_ANON_KEY=sb_publishable_HhOB2XDXTNvfonIV4-8yeg_V2-WX40j
 
-# Optional: custom collection names (defaults can be used in code if not set)
-MONGODB_COLLECTION_SCREEN_TIME=screen_time
-MONGODB_COLLECTION_APP_USAGE=app_usage
-MONGODB_COLLECTION_SLEEP=sleep_entries
-MONGODB_COLLECTION_USERS=users
+# Local storage configuration (USER'S SYSTEM - Personal data)
+# Screen time, app usage, sleep, goals, focus sessions stored locally for privacy
 
-
+# Server configuration
 NODE_ENV=development
+PORT=3001
+CORS_ORIGIN=http://localhost:5173
+
+# JWT configuration (CHANGE IN PRODUCTION!)
+JWT_SECRET=cosmicwell-super-secret-jwt-key-change-me-in-production
+JWT_EXPIRES_IN=7d
+JWT_REFRESH_EXPIRES_IN=30d
+
+# Database configuration
+DB_TYPE=sqlite
+DB_PATH=./data/cosmicwell.db
+
+# Rate limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX=100
+
+# Logging
+LOG_LEVEL=info
